--- a/MyReelty/MVC/Views/PremiumVideoCell.xib
+++ b/MyReelty/MVC/Views/PremiumVideoCell.xib
@@ -26,7 +26,7 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="V6p-Vf-qVq">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main_logo_small.png" translatesAutoresizingMaskIntoConstraints="NO" id="V6p-Vf-qVq">
                         <rect key="frame" x="8" y="8" width="75" height="28"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="75" id="9uc-ff-Jpr"/>
@@ -78,11 +78,11 @@ largest real estate video library</string>
             <connections>
                 <outlet property="backroundImageView" destination="Rdb-dh-NBY" id="Ein-8O-6Uk"/>
             </connections>
-            <point key="canvasLocation" x="483" y="376"/>
+            <point key="canvasLocation" x="372" y="200"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="main_logo.png" width="130" height="26"/>
+        <image name="main_logo_small.png" width="130" height="26"/>
         <image name="play_button.png" width="215" height="215"/>
     </resources>
 </document>
